fix: responsive spacing

--- a/about.html
+++ b/about.html
@@ -452,8 +452,11 @@
     <!-- Feature and facilities End -->
     <!-- Hotel Facilities Start -->
     <div class="service-area style-2 py-140">
+      <div class="shape">
+        <img src="images/shape/leaf.png" alt="shape" />
+      </div>
       <div class="container">
-        <div class="section-title mb-0 style-2">
+        <div class="section-title style-2">
           <div class="sec-content">
             <h5 class="short-title">Hotex SERVICES</h5>
             <h2 class="title">Hotel Facilities</h2>
