--- a/team-details.html
+++ b/team-details.html
@@ -297,7 +297,7 @@
       </div>
     </div>
     <!-- Page Header End !-->
-    <div class="team-details-area py-140">
+    <div class="team-details-area pt-140 pb-136">
       <div class="outer-shape">
         <img src="images/shape/leaf.png" alt="shape" />
       </div>
@@ -369,7 +369,7 @@
             </div>
           </div>
         </div>
-        <div class="latest-project mt-120">
+        <div class="latest-project mt-110">
           <h2 class="title">Latest Projects</h2>
           <div class="image-wrapper mt-60">
             <div class="">
