--- a/service-2.html
+++ b/service-2.html
@@ -298,7 +298,7 @@
     </div>
     <!-- Page Header End !-->
     <!-- List page wrapper Start -->
-    <div class="list-page-wrapper py-80">
+    <div class="list-page-wrapper py-140">
       <div class="container">
         <!-- <div class="row">
           <div class="col-lg-7">
@@ -506,7 +506,7 @@
                 </div>
               </div>
             </div>
-            <div class="basic-pagination basic-pagination-2 my-60">
+            <div class="basic-pagination basic-pagination-2">
               <ul>
                 <li>
                   <span aria-current="page" class="page-numbers current">
