--- a/blog-details.html
+++ b/blog-details.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
+    />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -17,41 +18,50 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png" />
+      href="images/logo/apple-touch-icon-57x57.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png" />
+      href="images/logo/apple-touch-icon-72x72.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png" />
+      href="images/logo/apple-touch-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png" />
+      href="images/logo/apple-touch-icon-114x114.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png" />
+      href="images/logo/apple-touch-icon-120x120.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png" />
+      href="images/logo/apple-touch-icon-144x144.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png" />
+      href="images/logo/apple-touch-icon-152x152.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png" />
+      href="images/logo/apple-touch-icon-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -72,7 +82,8 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"></div>
+        style="background-image: url('images/icon/preeloader.gif')"
+      ></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -266,7 +277,8 @@
     <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
-      style="background-image: url('images/section-bg/page-header-bg.jpg')">
+      style="background-image: url('images/hero-section/slider-2.jpg')"
+    >
       <div class="page-overlay"></div>
       <div class="shape">
         <img src="images/shape/slider-2.png" alt="breadcrumb-shape" />
@@ -282,7 +294,8 @@
               class="breadcrumb-wrapper py-215 my-60 mx-90"
               style="
                 background-image: url(images/hero-section/breadcrumb-2.jpg);
-              ">
+              "
+            >
               <div class="breadcrumb-list">
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -313,7 +326,8 @@
                 <a href="#">
                   <img
                     src="images/blog/blog-details-main.jpg"
-                    alt="Blog Image" />
+                    alt="Blog Image"
+                  />
                 </a>
               </div>
               <div class="post-content-wrapper">
@@ -492,7 +506,8 @@
                           src="images/blog/user-2.jpg"
                           alt="Commenter Author"
                           height="84"
-                          width="84" />
+                          width="84"
+                        />
                       </div>
                       <div class="comments-text">
                         <div class="avatar-name">
@@ -517,7 +532,8 @@
                               src="images/blog/user-1.jpg"
                               alt="Commenter Author"
                               height="84"
-                              width="84" />
+                              width="84"
+                            />
                           </div>
                           <div class="comments-text">
                             <div class="avatar-name">
@@ -565,7 +581,8 @@
                         <input
                           name="website"
                           type="text"
-                          placeholder="Website" />
+                          placeholder="Website"
+                        />
                       </div>
                     </div>
                     <div class="col-xl-12">
@@ -574,7 +591,8 @@
                           name="comment"
                           cols="20"
                           rows="3"
-                          placeholder="Comment"></textarea>
+                          placeholder="Comment"
+                        ></textarea>
                       </div>
                     </div>
                     <div class="col-12">
@@ -763,7 +781,8 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')">
+      style="background-image: url('images/section-bg/footer-1.png')"
+    >
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -778,7 +797,8 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo" />
+                        alt="Footer Logo"
+                      />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -818,46 +838,56 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
               </div>
             </div>
