--- a/index-2.html
+++ b/index-2.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
+    />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -17,41 +18,50 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png" />
+      href="images/logo/apple-touch-icon-57x57.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png" />
+      href="images/logo/apple-touch-icon-72x72.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png" />
+      href="images/logo/apple-touch-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png" />
+      href="images/logo/apple-touch-icon-114x114.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png" />
+      href="images/logo/apple-touch-icon-120x120.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png" />
+      href="images/logo/apple-touch-icon-144x144.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png" />
+      href="images/logo/apple-touch-icon-152x152.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png" />
+      href="images/logo/apple-touch-icon-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -73,7 +83,8 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"></div>
+        style="background-image: url('images/icon/preeloader.gif')"
+      ></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -265,7 +276,8 @@
     <!-- Slider Section Start !-->
     <div
       class="slider-area style-2 bg-gray-100"
-      style="background-image: url(images/hero-section/slider-2.jpg)">
+      style="background-image: url(images/hero-section/slider-2.jpg)"
+    >
       <div class="shape-two">
         <img src="images/shape/slider-2.1.png" alt="hotex" />
       </div>
@@ -282,7 +294,8 @@
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
-                    alt="hero-image" />
+                    alt="hero-image"
+                  />
                 </div>
                 <div class="slider-content-wrapper text-center">
                   <div class="slider-content">
@@ -303,7 +316,8 @@
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
-                    alt="hero-image" />
+                    alt="hero-image"
+                  />
                 </div>
                 <div class="slider-content-wrapper text-center">
                   <div class="slider-content">
@@ -324,7 +338,8 @@
                 <div class="image-wrapper">
                   <img
                     src="images/hero-section/v-2/image-1.jpg"
-                    alt="hero-image" />
+                    alt="hero-image"
+                  />
                 </div>
                 <div class="slider-content-wrapper text-center">
                   <div class="slider-content">
@@ -358,7 +373,8 @@
               <div class="video-popup-btn">
                 <a
                   href="https://www.youtube.com/watch?v=SZEflIVnhH8"
-                  class="mfp-iframe video-play">
+                  class="mfp-iframe video-play"
+                >
                   <i class="fa-solid fa-play" aria-hidden="true"></i>
                 </a>
               </div>
@@ -392,7 +408,8 @@
                 <img
                   src="images/shape/gift-card-1.png"
                   alt="gift card"
-                  class="img-fluid" />
+                  class="img-fluid"
+                />
               </div>
               <div class="section-title mb-0">
                 <div class="sec-content">
@@ -426,7 +443,8 @@
       <div class="bg-image">
         <img
           src="images/section-bg/room_and_suits-1.jpg"
-          alt="room_and_suites" />
+          alt="room_and_suites"
+        />
       </div>
       <div class="banner-text">
         <p>
@@ -450,7 +468,8 @@
         <div class="room-card-wrapper-two">
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-1.jpg)">
+            style="background-image: url(images/room-card/img-1.jpg)"
+          >
             <div class="count">
               <p>02</p>
             </div>
@@ -483,7 +502,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-2.jpg)">
+            style="background-image: url(images/room-card/img-2.jpg)"
+          >
             <div class="count">
               <p>03</p>
             </div>
@@ -516,7 +536,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-3.jpg)">
+            style="background-image: url(images/room-card/img-3.jpg)"
+          >
             <div class="count">
               <p>04</p>
             </div>
@@ -549,7 +570,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-4.jpg)">
+            style="background-image: url(images/room-card/img-4.jpg)"
+          >
             <div class="count">
               <p>05</p>
             </div>
@@ -582,7 +604,8 @@
           </div>
           <div
             class="room-card style-2"
-            style="background-image: url(images/room-card/img-1.jpg)">
+            style="background-image: url(images/room-card/img-1.jpg)"
+          >
             <div class="count">
               <p>01</p>
             </div>
@@ -654,7 +677,8 @@
                 <div class="icon">
                   <img
                     src="images/icon/info-card/food-covered.svg"
-                    alt="icon" />
+                    alt="icon"
+                  />
                 </div>
                 <div class="content">
                   <h3 class="title">Parking Space</h3>
@@ -721,7 +745,8 @@
     <!--- Price Area Start !-->
     <div
       class="price-area style-1 background-gray pt-140 pb-230"
-      style="background-image: url(images/section-bg/price-area.jpg)">
+      style="background-image: url(images/section-bg/price-area.jpg)"
+    >
       <div class="container">
         <div class="section-title style-3 mb-30">
           <div class="row justify-content-between align-items-end mb-30">
@@ -862,7 +887,8 @@
                   class="date-input"
                   id="checkin"
                   name="checkin"
-                  required />
+                  required
+                />
               </div>
             </div>
 
@@ -876,7 +902,8 @@
                   class="date-input"
                   id="checkout"
                   name="checkout"
-                  required />
+                  required
+                />
               </div>
             </div>
 
@@ -916,7 +943,8 @@
                 <div class="main-img">
                   <img
                     src="images/image-card/about-us-2.png"
-                    alt="about card img" />
+                    alt="about card img"
+                  />
                 </div>
                 <div class="content">
                   <h3 class="title mt-44">
@@ -959,7 +987,8 @@
                     <div class="image">
                       <img
                         src="images/icon/info-card/food-covered.svg"
-                        alt="" />
+                        alt=""
+                      />
                     </div>
 
                     <div class="content">
@@ -1141,7 +1170,8 @@
     <!-- Brand Slider Area Start -->
     <div
       class="brand-slider-area style-1 py-65"
-      style="background-image: url(images/shape/client-slider.png)">
+      style="background-image: url(images/shape/client-slider.png)"
+    >
       <div class="container">
         <div class="client-logo-slider-wrapper">
           <div class="client-logo">
@@ -1257,9 +1287,13 @@
     <div class="subscribe-area style-1 pt-140">
       <div
         class="inner-wrapper"
-        style="background-image: url(images/section-bg/testimonial-two.png)">
+        style="background-image: url(images/section-bg/testimonial-two.png)"
+      >
         <div class="container">
           <div class="subscribe-form-widget">
+            <div class="shape">
+              <img src="images/shape/scale-shape-small.png" alt="shape" />
+            </div>
             <div class="image">
               <img src="images/icon/letter.svg" alt="subscribe" />
             </div>
@@ -1272,7 +1306,7 @@
             <form>
               <div class="mc4wp-form-fields">
                 <div class="single-field">
-                  <input type="email" placeholder="Enter Your Email" />
+                  <input type="email" placeholder="@your email.com" />
                 </div>
                 <div class="d-flex justify-content-center mt-45">
                   <button class="submit-btn" type="submit">submit now</button>
@@ -1299,7 +1333,8 @@
               <div class="image-wrapper">
                 <img
                   src="images/image-card/info-img-card.jpg"
-                  alt="team member" />
+                  alt="team member"
+                />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -1358,7 +1393,8 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')">
+      style="background-image: url('images/section-bg/footer-1.png')"
+    >
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -1373,7 +1409,8 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo" />
+                        alt="Footer Logo"
+                      />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -1413,46 +1450,56 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram" />
+                    alt="instagram"
+                  />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo" />
+                    alt="instagram photo"
+                  />
                 </div>
               </div>
             </div>
