--- a/project.html
+++ b/project.html
@@ -15,14 +15,46 @@
     <link rel="icon" type="image/png" href="images/logo/favicon.png" />
 
     <link rel="apple-touch-icon" href="images/logo/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="images/logo/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/logo/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="images/logo/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/logo/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="images/logo/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="images/logo/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="images/logo/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/logo/apple-touch-icon-180x180.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="images/logo/apple-touch-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="images/logo/apple-touch-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="images/logo/apple-touch-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="images/logo/apple-touch-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="images/logo/apple-touch-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="images/logo/apple-touch-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="images/logo/apple-touch-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/logo/apple-touch-icon-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -48,7 +80,10 @@
   <body>
     <!-- Preloader Start !-->
     <div id="preloader">
-      <div id="preloader-status" style="background-image: url('images/icon/preeloader.gif')"></div>
+      <div
+        id="preloader-status"
+        style="background-image: url('images/icon/preeloader.gif')"
+      ></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -58,7 +93,9 @@
       <div class="header-menu-area sticky-header">
         <div class="container">
           <div class="row">
-            <div class="col-xxl-3 col-xl-2 col-lg-3 col-md-6 col-6 d-flex align-items-center">
+            <div
+              class="col-xxl-3 col-xl-2 col-lg-3 col-md-6 col-6 d-flex align-items-center"
+            >
               <div class="logo">
                 <a href="index.html" class="standard-logo">
                   <img src="images/logo/white-logo.png" alt="logo" />
@@ -94,7 +131,9 @@
                       <ul class="submenu">
                         <li><a href="service.html">Service Page</a></li>
                         <li>
-                          <a href="service-details.html">Service Details Page</a>
+                          <a href="service-details.html"
+                            >Service Details Page</a
+                          >
                         </li>
                       </ul>
                     </li>
@@ -105,9 +144,15 @@
                         <li><a href="pricing.html">Pricing Page</a></li>
                         <li><a href="apartment.html">Apartment Page</a></li>
                         <li><a href="project.html">Project Page</a></li>
-                        <li><a href="project-details.html">Project Details Page</a></li>
+                        <li>
+                          <a href="project-details.html"
+                            >Project Details Page</a
+                          >
+                        </li>
                         <li><a href="team-member.html">Team Page</a></li>
-                        <li><a href="team-details.html">Team Details Page</a></li>
+                        <li>
+                          <a href="team-details.html">Team Details Page</a>
+                        </li>
                       </ul>
                     </li>
                     <li class="dropdown">
@@ -130,12 +175,16 @@
                   </a>
                 </div>
                 <div class="btn-wrapper">
-                  <a href="#" class="theme-btn">Get a quote<i class="fa-solid fa-plus"></i></a>
+                  <a href="#" class="theme-btn"
+                    >Get a quote<i class="fa-solid fa-plus"></i
+                  ></a>
                 </div>
               </div>
               <!-- Mobile Menu Toggle Button Start !-->
               <div class="mobile-menu-bar d-lg-none text-end">
-                <a href="#" class="mobile-menu-toggle-btn"><i class="fal fa-bars"></i></a>
+                <a href="#" class="mobile-menu-toggle-btn"
+                  ><i class="fal fa-bars"></i
+                ></a>
               </div>
               <!-- Mobile Menu Toggle Button End !-->
             </div>
@@ -164,7 +213,10 @@
             <div class="menu-sidebar-single-widget">
               <h5 class="menu-sidebar-title">Contact Info</h5>
               <div class="header-contact-info">
-                <span><i class="fa-solid fa-location-dot"></i>20, Bordeshi, New York, US</span>
+                <span
+                  ><i class="fa-solid fa-location-dot"></i>20, Bordeshi, New
+                  York, US</span
+                >
                 <span
                   ><a href="mailto:hello@technova.com"
                     ><i class="fa-regular fa-envelope"></i>hello@technova.com</a
@@ -193,7 +245,7 @@
     <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
-      style="background-image: url('images/section-bg/page-header-bg.jpg')"
+      style="background-image: url('images/hero-section/slider-2.jpg')"
     >
       <div class="page-overlay"></div>
       <div class="container">
@@ -368,7 +420,9 @@
                             <i class="fa-light fa-envelope"></i>
                           </div>
                           <div class="contact-text">
-                            <a href="mailto: info@example.com">info@example.com</a>
+                            <a href="mailto: info@example.com"
+                              >info@example.com</a
+                            >
                           </div>
                         </li>
 
@@ -395,8 +449,8 @@
                 <h2 class="footer-widget-title">About Us</h2>
                 <div class="footer-widget-info">
                   <p>
-                    Lorem Ipsum is simply is dumi omy is text Loremo Ipsum is simply is out no our o
-                    dummy text.
+                    Lorem Ipsum is simply is dumi omy is text Loremo Ipsum is
+                    simply is out no our o dummy text.
                   </p>
                   <div class="social-profile">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -431,10 +485,13 @@
                           </div>
                           <div class="latest-post-desc">
                             <span class="latest-post-meta"
-                              ><i class="fa-solid fa-calendar-days"></i> January 13, 2023</span
+                              ><i class="fa-solid fa-calendar-days"></i> January
+                              13, 2023</span
                             >
                             <h3 class="latest-post-title">
-                              <a href="blog-details.html">The standard chunk of Lorem Ipsum</a>
+                              <a href="blog-details.html"
+                                >The standard chunk of Lorem Ipsum</a
+                              >
                             </h3>
                           </div>
                         </li>
@@ -444,10 +501,13 @@
                           </div>
                           <div class="latest-post-desc">
                             <span class="latest-post-meta"
-                              ><i class="fa-solid fa-calendar-days"></i> January 13, 2023</span
+                              ><i class="fa-solid fa-calendar-days"></i> January
+                              13, 2023</span
                             >
                             <h3 class="latest-post-title">
-                              <a href="blog-details.html">The standard chunk of Lorem Ipsum</a>
+                              <a href="blog-details.html"
+                                >The standard chunk of Lorem Ipsum</a
+                              >
                             </h3>
                           </div>
                         </li>
@@ -462,9 +522,15 @@
                 <h2 class="footer-widget-title">Newsletter</h2>
                 <!-- Newsletter Section Start !-->
                 <div class="subscribe-form-wrapper">
-                  <p>Quis nostrud enisi ut aliquip euox eain commo do conse inrep rehend</p>
+                  <p>
+                    Quis nostrud enisi ut aliquip euox eain commo do conse inrep
+                    rehend
+                  </p>
                   <div class="subscribe-form-widget">
-                    <form data-dashlane-rid="fb333f11ed2dc9a4" data-form-type="newsletter">
+                    <form
+                      data-dashlane-rid="fb333f11ed2dc9a4"
+                      data-form-type="newsletter"
+                    >
                       <div class="mc4wp-form-fields">
                         <div class="single-field">
                           <input
@@ -795,7 +861,12 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
               </div>
               <input type="search" placeholder="Search" />
-              <button class="theme-btn" type="submit" title="Search" aria-label="Search">
+              <button
+                class="theme-btn"
+                type="submit"
+                title="Search"
+                aria-label="Search"
+              >
                 Search
               </button>
             </div>
