--- a/about.html
+++ b/about.html
@@ -247,9 +247,9 @@
                   20, Bordeshi, New York, US
                 </span>
                 <span>
-                  <a href="mailto:hello@technova.com">
+                  <a href="mailto:hello@hotex.com">
                     <i class="fa-regular fa-envelope"></i>
-                    hello@technova.com
+                    hello@hotex.com
                   </a>
                 </span>
                 <span>
@@ -565,7 +565,7 @@
     </div>
     <!-- Hotel Facilities End -->
     <!-- Testimonial area styel-1 start -->
-    <div class="testimonial-area">
+    <div class="testimonial-area about-page">
       <div class="container">
         <div class="banner-text">
           <p>Testimonial</p>
