--- a/blog-details.html
+++ b/blog-details.html
@@ -248,9 +248,9 @@
                   20, Bordeshi, New York, US
                 </span>
                 <span>
-                  <a href="mailto:hello@technova.com">
+                  <a href="mailto:hello@hotex.com">
                     <i class="fa-regular fa-envelope"></i>
-                    hello@technova.com
+                    hello@hotex.com
                   </a>
                 </span>
                 <span>
@@ -275,6 +275,7 @@
     <div class="body-overlay"></div>
 
     <!-- Page Header Start !-->
+    <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
       style="background-image: url('images/hero-section/slider-2.jpg')"
@@ -291,7 +292,7 @@
         <div class="row">
           <div class="col-md-12">
             <div
-              class="breadcrumb-wrapper py-215 my-60 mx-90"
+              class="breadcrumb-wrapper py-215 my-95"
               style="
                 background-image: url(images/hero-section/breadcrumb-2.jpg);
               "
@@ -304,8 +305,7 @@
               </div>
               <div class="page-heading">
                 <h3 class="page-title">
-                  Retore Lighting Design
-                  <br />
+                  Retore Lighting Design <br />
                   in The Hotel
                 </h3>
               </div>
@@ -314,6 +314,7 @@
         </div>
       </div>
     </div>
+    <!-- Page Header End !-->
     <!-- Page Header End !-->
 
     <div class="blog-area py-140">
