--- a/team-member.html
+++ b/team-member.html
@@ -247,9 +247,9 @@
                   20, Bordeshi, New York, US
                 </span>
                 <span>
-                  <a href="mailto:hello@technova.com">
+                  <a href="mailto:hello@hotex.com">
                     <i class="fa-regular fa-envelope"></i>
-                    hello@technova.com
+                    hello@hotex.com
                   </a>
                 </span>
                 <span>
@@ -296,11 +296,11 @@
               <div class="breadcrumb-list">
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="#">Reservation</a></li>
+                  <li class="active"><a href="#">Team Member</a></li>
                 </ul>
               </div>
               <div class="page-heading">
-                <h3 class="page-title">Reservation</h3>
+                <h3 class="page-title">Team Member</h3>
               </div>
             </div>
           </div>
