--- a/project-details.html
+++ b/project-details.html
@@ -218,8 +218,8 @@
                   York, US</span
                 >
                 <span
-                  ><a href="mailto:hello@technova.com"
-                    ><i class="fa-regular fa-envelope"></i>hello@technova.com</a
+                  ><a href="mailto:hello@hotex.com"
+                    ><i class="fa-regular fa-envelope"></i>hello@hotex.com</a
                   >
                 </span>
                 <span
