--- a/service-2.html
+++ b/service-2.html
@@ -247,9 +247,9 @@
                   20, Bordeshi, New York, US
                 </span>
                 <span>
-                  <a href="mailto:hello@technova.com">
+                  <a href="mailto:hello@hotex.com">
                     <i class="fa-regular fa-envelope"></i>
-                    hello@technova.com
+                    hello@hotex.com
                   </a>
                 </span>
                 <span>
