--- a/service-details.html
+++ b/service-details.html
@@ -247,9 +247,9 @@
                   20, Bordeshi, New York, US
                 </span>
                 <span>
-                  <a href="mailto:hello@technova.com">
+                  <a href="mailto:hello@hotex.com">
                     <i class="fa-regular fa-envelope"></i>
-                    hello@technova.com
+                    hello@hotex.com
                   </a>
                 </span>
                 <span>
@@ -385,7 +385,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12">
-                <div class="service-details mt-60">
+                <div class="service-details mt-50">
                   <nav>
                     <ul class="nav-tab m-0" id="nav-tab" role="tablist">
                       <li
@@ -438,7 +438,7 @@
                       aria-labelledby="nav-tab1"
                       tabindex="0"
                     >
-                      <div class="content-wrapper mt-50">
+                      <div class="content-wrapper mt-40">
                         <h3 class="title">Room Details</h3>
                         <p class="desc mt-20">
                           Lorem ipsum dolor sit amet, an has justo simul
