--- a/service.html
+++ b/service.html
@@ -247,9 +247,9 @@
                   20, Bordeshi, New York, US
                 </span>
                 <span>
-                  <a href="mailto:hello@technova.com">
+                  <a href="mailto:hello@hotex.com">
                     <i class="fa-regular fa-envelope"></i>
-                    hello@technova.com
+                    hello@hotex.com
                   </a>
                 </span>
                 <span>
@@ -321,7 +321,7 @@
             </div>
           </div>
         </div> -->
-        <div class="row mt-60">
+        <div class="row">
           <div class="col-lg-8">
             <div class="room-card style-3">
               <div class="image-wrapper">
